# Plugins CMakeLists.txt

# Ad plugin
add_subdirectory(Ad)

# Drivers
add_subdirectory(Drivers)

# Graphic backends
add_subdirectory(GraphicBackends)

# Native scenarios
add_subdirectory(NativeScenarios)

# Native widgets
add_subdirectory(NativeWidgets)

# Payments
add_subdirectory(Payments)

# Test plugin
add_subdirectory(TemplatePlugin)

# Scenario backends
# add_subdirectory(ScenarioBackends)
